2329.	[bug]		Clearer help text for dig's '-x' and '-i' options.

2328.	[bug]		Add AAAA addresses for A.ROOT-SERVERS.NET,
			F.ROOT-SERVERS.NET, H.ROOT-SERVERS.NET,
			J.ROOT-SERVERS.NET, K.ROOT-SERVERS.NET and
			M.ROOT-SERVERS.NET.

2326.	[bug]		It was possible to trigger a INSIST in the acache
			processing.

2325.	[port]		Linux: use capset() function if available. [RT #17557]

2323.	[port]		tru64: namespace clash. [RT #17547]

2322.	[port]		MacOS: work around the limitation of setrlimit()
			for RLIMIT_NOFILE. [RT #17526]

2319.	[bug]		Silence Coverity warnings in 
			lib/dns/rdata/in_1/apl_42.c. [RT #17469]

2318.	[port]		sunos fixes for libbind.  [RT #17514]

2314.	[bug]		Uninitialized memory use on error path in
			bin/named/lwdnoop.c.  [RT #17476]

2313.	[cleanup]	Silence Coverity warnings. Handle private stacks.
			[RT #17447] [RT #17478]

2312.	[cleanup]	Silence Coverity warning in lib/isc/unix/socket.c.
			[RT #17458]

2311.   [func]          Update ACL regression test. [RT #17462]

2310.   [bug]		dig, host, nslookup: flush stdout before emitting
			debug/fatal messages.  [RT #17501]

2308.	[cleanup]	Silence Coverity warning in bin/named/controlconf.c.
			[RT #17495]

2307.	[bug]		Remove infinite loop from lib/dns/sdb.c. [RT #17496]

2306.	[bug]		Remove potential race from lib/dns/resolver.c.
			[RT #17470]

2305.	[security]	inet_network() buffer overflow. CVE-2008-0122.

2304.	[bug]		Check returns from all dns_rdata_tostruct() calls.
			[RT #17460]

2303.	[bug]		Remove unnecessary code from bin/named/lwdgnba.c.
			[RT #17471]

2302.	[bug]		Fix memset() calls in lib/tests/t_api.c. [RT #17472]

2301.	[bug]		Remove resource leak and fix error messages in
			bin/tests/system/lwresd/lwtest.c. [RT #17474]

2300.	[bug]		Fixed failure to close open file in 
			bin/tests/names/t_names.c. [RT #17473]

2299.	[bug]		Remove unnecessary NULL check in
			bin/nsupdate/nsupdate.c. [RT #17475]

2298.	[bug]		isc_mutex_lock() failure not caught in